[package]
name = "map_vec"
version = "0.1.1"
license = "MIT OR Apache-2.0"
authors = ["Nick Hynes <nhynes@nhynes.com>"]
repository = "https://github.com/nhynes/map_vec"
description = "The Map API backed by a Vec"
readme = "README.md"
categories = ["data-structures", "embedded", "no-std"]
edition = "2018"
keywords = ["vec", "map"]

[dependencies]

[dev-dependencies]
rand = "0.7"
