[package]
name = "map_vec"
version = "0.5.0"
license = "MIT OR Apache-2.0"
authors = ["Nick Hynes <nhynes@nhynes.com>"]
repository = "https://github.com/nhynes/map_vec"
description = "The Map and Set APIs backed by Vec"
readme = "README.md"
categories = ["data-structures", "embedded", "no-std"]
edition = "2021"
keywords = ["vec", "map", "set"]

[dependencies]
serde = { version = "1", optional = true, features = ["derive"] }

[dev-dependencies]
pretty_assertions = "1"
serde_json = "1"
rand = "0.8"

[features]
default = ["serde"]
nightly = []
